cmake_minimum_required(VERSION 3.19)
project(AoC)

set(CMAKE_CXX_STANDARD 17)

add_executable(AoC src/main.cpp)
add_executable(Day1 src/Day1.cpp)
add_executable(Day2 src/Day2.cpp)
add_executable(Day3 src/Day3.cpp)
add_executable(Day4 src/Day4.cpp)
add_executable(Day5 src/Day5.cpp)
add_executable(Day6 src/Day6.cpp)