cmake_minimum_required(VERSION 3.19)
project(AoC)

set(CMAKE_CXX_STANDARD 17)

add_executable(AoC src/main.cpp)
add_executable(Day1 src/Day1.cpp)
add_executable(Day2 src/Day2.cpp)
add_executable(Day3 src/Day3.cpp)
add_executable(Day4 src/Day4.cpp)
add_executable(Day5 src/Day5.cpp)
add_executable(Day6 src/Day6.cpp)
add_executable(Day7 src/Day7.cpp)
add_executable(Day8 src/Day8.cpp)
add_executable(Day9 src/Day9.cpp)
add_executable(Day10 src/Day10.cpp)
add_executable(Day11 src/Day11.cpp)
add_executable(Day12 src/Day12.cpp)
add_executable(Day13 src/Day13.cpp)
add_executable(Day14 src/Day14.cpp)
add_executable(Day15 src/Day15.cpp)